chore(backend): resolve SonarCloud maintainability smells from PR #32
Behavior-preserving cleanup of the 9 code smells SonarCloud flagged on the
pivot PR (Quality Gate passed; these were below-threshold smells):

- MangaDexClient: extract "cover_art"/"attributes" literal constants; replace
  nested Math.min/Math.max Retry-After clamp with Java 21 Math.clamp (same
  [0, MAX] bounds).
- MangaController: unwrap redundant @ApiResponses into repeatable @ApiResponse.
- Notification job + MangaService: make LocalDateTime.now() zone explicit as
  ZoneId.systemDefault() — identical behavior, stays consistent with the
  Hibernate-managed createdAt/updatedAt on the same rows (deliberately NOT
  switched to America/Sao_Paulo).
- Tests: drop all-eq() Mockito wrappers for raw args; hoist non-throwing setup
  out of the assertThatThrownBy lambda.

Backend suite (spotless/test/jacoco + coverage gate) green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Co-Authored-By: Codex <noreply@openai.com>